# kinova_control_experiments

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
config/: abag.cfg  kinova.cfg
executables/: control_kinova_pos.cpp  control_kinova_posvel.cpp  control_kinova_vel.cpp  plot_abag_data.py
include/: constants.hpp  kinova_util.h  util.h
src/: control_kinova.cpp  kinova_util.cpp  util.cpp
